# osoyoo

./: .gitignore  Agent5.py  Agent6.py  CompositeInteraction.py  Controller.py  ControllerNew.py  EMWindow.py  EgoMemoryWindow.py  EgoMemoryWindowNew.py  HexaCell.py  HexaGrid.py  HexaMemory.py  HexaView.py  Interaction.py  LICENSE  MANIFEST.in  MemoryNew.py  MemoryV1.py  Model.py  OsoyooCar.py  OsoyooCarEnacter.py  PetitCatMain1.py  Phenomenon.py  PhenomenonNew.py  README.md  Robot.py  RobotController.py  RobotDefine.py  Synthesizer.py  Utils.py  WifiInterface.py  egocentric_memory.py  main.py  packages.txt  pyproject.toml  requirements.txt  test.py  test2.py  test3.py  test4.py  (+6 more)
Agents/: Agent5.py  AgentAlignNorth.py  AgentSwing.py  CompositeInteraction.py
Controllers/: Controller.py  ControllerNew.py  __init__.py
Misc/: OsoyooCar.py  RobotDefine.py  Utils.py  WifiInterface.py  __init__.py
Model/: __init__.py
Osoyoo/: __init__.py
Osoyoo_car_enacter/: DelayAction.cpp  DelayAction.h  Head.cpp  Head.h  JsonOutcome.cpp  JsonOutcome.h  LightSensor.cpp  LightSensor.h  Osoyoo_car_enacter.ino  Servo_Scan.cpp  Servo_Scan.h  WifiBot.cpp  WifiBot.h  calcDist.cpp  calcDist.h  compass.cpp  compass.h  gyro.cpp  gyro.h  omny_wheel_motion.cpp  omny_wheel_motion.h  tracking.cpp  tracking.h
Python/: main.py
Views/: EgoMemoryWindow.py  EgoMemoryWindowNew.py  HexaView.py  __init__.py
architecture_test/: CtrlHexaview.py  CtrlModel.py  CtrlRobot.py  CtrlSynthe.py  CtrlView.py  Model.py
autocat/: CtrlWorkspace.py  Flock.py  SoundPlayer.py  Utils.py  Workspace.py  __init__.py
(+552 files in other folders)
