# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petitbrain"
version = "1.0.0"
description = "A small cognitive architecture to control robots"
readme = "README.md"
authors = [{ name = "Olivier Georgeon", email = "olivier.georgeon@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Robot Framework",
]
keywords = ["robot", "artificial intelligence", "cognitive architecture"]
dependencies = [
    "circle-fit~=0.2.1",
    "keyboard~=0.13.5",
    "matplotlib~=3.8.3",
    "networkx~=3.2",
    "numpy~=1.26.4",
    "open3d~=0.18.0",
    "pandas~=2.2.2",
    "pyglet==1.5.22",
    "pyrr~=0.10.3",
    "scipy~=1.12",
    "seaborn~=0.13.2",
    "structlog~=24.4.0",
    "webcolors~=1.13",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["petitbrain*"]
exclude = ["log", "petitcat", "experiments", "docs"]

[project.urls]
Homepage = "https://github.com/UCLy/INIT2"

[project.scripts]
realpython = "petitbrain:prompt_teleop"
realpython = "petitbrain:reliable_teleop"
